@@ -413,6 +413,12 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       key. Change old invocations of generateHostKey () accordingly.
     - src/onmainwindow.cpp: refactor generateKey () a little bit to compact
       it.
+    - src/onmainwindow.{cpp,h}: rewrite generateKey () function to actually
+      also generate user keys. Now returns the private key file path (public
+      key file path is trivially determined by appending ".pub" to that return
+      value.) Change all locations referencing generateKey () to use the
+      return value (if necessary) and remove dead code that was used to
+      generate a user key manually previously.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
